--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,11 +34,11 @@ body {
     background: #f1f5f9;
 }
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(135deg, #40513B, #628141);
+    background: #285430;
     border-radius: 3px;
 }
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(135deg, #628141, #E5D9B6);
+    background: #1a3820;
 }
 
 
