--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,3 +54,14 @@ html {
     -ms-overflow-style: none !important;
     scrollbar-width: none !important;
 }
+
+/* Force spin buttons to be visible */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: inner-spin-button !important;
+  opacity: 1 !important;
+}
+input[type=number] {
+  -moz-appearance: number-input !important;
+  appearance: auto !important;
+}
